gogs/k8s/gogs-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    io.kompose.service: gogs
  name: gogs
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gogs
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: gogs
    spec:
      containers:
      - image: gogs/gogs-rpi:0.11.91
        name: gogs
        ports:
        - containerPort: 22
        - containerPort: 3000
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: gogs-data
      restartPolicy: Always
      volumes:
      - name: gogs-data
        persistentVolumeClaim:
          claimName: gogs-data
status: {}
