gogs/k8s/gogs-postgres-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    io.kompose.service: gogs-postgres
  name: gogs-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gogs-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: gogs-postgres
    spec:
      containers:
      - name: gogs-postgres
        image: postgres:10.2
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: gogs-db-data
        - mountPath: "/run/secrets/db-passwords"
          name: gogs-db-passwords
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: gogs-db-data
        persistentVolumeClaim:
          claimName: gogs-db-data
      - name: gogs-db-passwords
        secret:
          secretName: gogs-db-passwords
status: {}
