gogs/k8s/gogs-db-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: gogs-db-admin
  name: gogs-db-admin
spec:
  type: NodePort
  ports:
  - name: "5050"
    port: 5050
    targetPort: 5050
    nodePort: 30550
  selector:
    io.kompose.service: gogs-db-admin
status:
  loadBalancer: {}
