gogs/k8s/gogs-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: gogs-postgres
  name: gogs-postgres
spec:
  clusterIP: None
  ports:
  - name: postgre
    port: 5432
    targetPort: 5432
  selector:
    io.kompose.service: gogs-postgres
status:
  loadBalancer: {}
