gogs/k8s/gogs-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: gogs
  name: gogs
spec:
  type: NodePort
  ports:
  - name: "10022"
    port: 10022
    targetPort: 22
    nodePort: 30022
  - name: "3000"
    port: 3000
    targetPort: 3000
    nodePort: 30300
  selector:
    io.kompose.service: gogs
status:
  loadBalancer: {}
